--- a/1_inception/index.html
+++ b/1_inception/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <div id="root"></div>
-    
+
     <!-- printing hello world using html h1 tag -->
     <h1>hello world</h1>
 
@@ -30,10 +31,7 @@
     ></script>
 
     <!-- printing hello world using react -->
-    <script>
-      const heading = React.createElement('h1',{},'Hello, world! using React');
-      const root = ReactDOM.createRoot(document.getElementById('root'));
-      root.render(heading);
-    </script>
+    <script src="./App.js"></script>
+  
   </body>
 </html>
