--- a/3_laying_the_foundation/index.html
+++ b/3_laying_the_foundation/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div id="root"></div>
-    <h1>Hi</h1>
+  </head>
+  <body>
+    <div id="root">
+      <h1>Jai is here</h1>
+    </div>
+
     <script type="module" src="./App.js"></script>
-</body>
+  </body>
 </html>
