--- a/3_laying_the_foundation/index.html
+++ b/3_laying_the_foundation/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>Jai is here</h1>
+      <h1>Not Rendered</h1>
     </div>
 
     <script type="module" src="./App.js"></script>
