--- a/6_exploring_the_world/index.html
+++ b/6_exploring_the_world/index.html
@@ -13,9 +13,7 @@
     />
   </head>
   <body>
-    <div id="root">
-      <h1>Not Rendered</h1>
-    </div>
+    <div id="root"></div>
 
     <script type="module" src="./src/App.js"></script>
   </body>
